[package]
name = "boxes"
version = "0.1.0"
authors = ["Christopher Biscardi <chris@christopherbiscardi.com>"]
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", rev = "b22db47e1003db2d712baec46c0f0a1f88b0a837" }
# bevy_easings = "0.10.0"
itertools = "0.11.0"
rand = "0.8.5"
