[package]
name = "boxes"
version = "0.1.0"
authors = ["Christopher Biscardi <chris@christopherbiscardi.com>"]
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13"
bevy_easings = "0.13"
itertools = "0.12"
rand = "0.8.5"

[lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"
